fix word breaks on job details page

--- a/apps/warp-protocol/src/pages/job-page/panels/JobDetailsPanel.module.sass
+++ b/apps/warp-protocol/src/pages/job-page/panels/JobDetailsPanel.module.sass
@@ -1,4 +1,5 @@
 .root
+  word-break: break-all
 
 .top
   justify-content: space-between
